--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       </nav>
     </div>
     <div class="title">
-        <h1>SIMPLIFIED SMASH OVERLAY</h1>
+        <h1>SIMPLIFIED SSBU SCOREBOARD</h1>
     </div>
     <h2>HOW TO USE</h2>
     <div class="instructions">
