--- a/index.html
+++ b/index.html
@@ -43,6 +43,6 @@
             <li>Now you can get tags from matches by simply entering the match identifier into the match number field (the match identifier is the 1-2 letters next to a set)</li>
         </ol>
     </div>
-
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7144029242392624" crossorigin="anonymous"></script>
 
   </body>
