--- a/index.html
+++ b/index.html
@@ -21,6 +21,17 @@
         <h1>SIMPLIFIED SSBU SCOREBOARD</h1>
     </div>
     <h2>HOW TO USE</h2>
+      <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7144029242392624" crossorigin="anonymous"></script>
+        <!-- ssb page ad -->
+        <ins class="adsbygoogle"
+        style="display:block"
+         data-ad-client="ca-pub-7144029242392624"
+        data-ad-slot="7764191400"
+        data-ad-format="auto"
+        data-full-width-responsive="true"></ins>
+       <script>
+        (adsbygoogle = window.adsbygoogle || []).push({});
+        </script>
     <div class="instructions">
         <h3><u>Basic Setup</u></h3>
         <ol>
