--- a/index.html
+++ b/index.html
@@ -2,9 +2,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>SSBU Scoreboard</title>
+    <title>Simplified Smash Scoreboard</title>
     <link rel="stylesheet" href="css/index.css">
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7144029242392624" crossorigin="anonymous"></script>
+    <meta name="description" content="A simplified score board overlay utility for Super Smash Bros Streams complete with start.gg API integration with
+                                      more features on the way">
   </head>
   <body>
     <div class="navbar">
