--- a/misc/about.html
+++ b/misc/about.html
@@ -43,6 +43,15 @@
             often.
             <br> That Said, I Hope the ads just do enough to cover that cost otherwise its not that big of a deal.
         </p>
+        <form action="https://www.paypal.com/donate" method="post" target="_top">
+            <input type="hidden" name="business" value="GCNS5DU63YYFY" />
+            <input type="hidden" name="no_recurring" value="1" />
+            <input type="hidden" name="item_name" value="Lets Keep Smashin (Smash Bros that is...)" />
+            <input type="hidden" name="currency_code" value="USD" />
+            <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_donate_LG.gif" border="0" name="submit" title="PayPal - The safer, easier way to pay online!" alt="Donate with PayPal button" />
+            <img alt="" border="0" src="https://www.paypal.com/en_US/i/scr/pixel.gif" width="1" height="1" />
+           </form>
+
         <h3>Creator</h3>
         <p>
             This is a solo project made by Hunter M. aka KillerSharkNHwk online.
