--- a/misc/about.html
+++ b/misc/about.html
@@ -51,7 +51,7 @@
             <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_donate_LG.gif" border="0" name="submit" title="PayPal - The safer, easier way to pay online!" alt="Donate with PayPal button" />
             <img alt="" border="0" src="https://www.paypal.com/en_US/i/scr/pixel.gif" width="1" height="1" />
            </form>
-
+        <blockquote class="twitter-tweet"><p lang="en" dir="ltr">live @ <a href="https://t.co/zP68PAD09E">https://t.co/zP68PAD09E</a></p>&mdash; UO Smash Club (@uo_smash) <a href="https://twitter.com/uo_smash/status/1585804109130539009?ref_src=twsrc%5Etfw">October 28, 2022</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
         <h3>Creator</h3>
         <p>
             This is a solo project made by Hunter M. aka KillerSharkNHwk online.
