--- a/misc/about.html
+++ b/misc/about.html
@@ -12,10 +12,10 @@
     <div class="navbar">
         <nav class="topnav">
             <ul class="navitems">
-                <li><a href="index.HTML">Home</a></li>
-                <li><a href="scoreboard_and_controller/scoreboard.html">Scoreboard</a></li>
-                <li><a href="scoreboard_and_controller/controller.html">Controller</a></li>
-                <li><a href="misc/about.html">About</a></li>
+                <li><a href="../index.HTML">Home</a></li>
+                <li><a href="../scoreboard_and_controller/scoreboard.html">Scoreboard</a></li>
+                <li><a href="../scoreboard_and_controller/controller.html">Controller</a></li>
+                <li><a href="about.html">About</a></li>
             </ul>
         </nav>
     </div>
