--- a/index.html
+++ b/index.html
@@ -1,59 +1,127 @@
-<html lang="en"><head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Simplified Smash Scoreboard</title>
-    <link rel="stylesheet" href="css/index.css">
-    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7144029242392624" crossorigin="anonymous"></script>
-    <meta name="description" content="A simplified score board overlay utility for Super Smash Bros Streams complete with start.gg API integration with
+<html lang="en">
+
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>Simplified Smash Bros Scoreboard</title>
+  <link rel="stylesheet" href="css/index.css">
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7144029242392624"
+    crossorigin="anonymous"></script>
+  <meta name="description" content="A simplified, open-source score board overlay utility for Super Smash Bros Ultimate Streams complete with start.gg API integration with
                                       more features on the way">
-  </head>
-  <body>
-    <div class="navbar">
-      <nav class="topnav">
-        <ul class="navitems">
-          <li><a href="index.HTML">Home</a></li>
-          <li><a href="scoreboard_and_controller/scoreboard.html">Scoreboard</a></li>
-          <li><a href="scoreboard_and_controller/controller.html">Controller</a></li>
-          <li><a href="misc/about.html">About</a></li>
+</head>
+
+<body>
+  <div class="navbar">
+    <nav class="topnav">
+      <ul class="navitems">
+        <li><a href="index.HTML">Home</a></li>
+        <li><a href="scoreboard_and_controller/scoreboard.html">Scoreboard</a></li>
+        <li><a href="scoreboard_and_controller/controller.html">Controller</a></li>
+        <li><a href="misc/about.html">About</a></li>
+      </ul>
+    </nav>
+  </div>
+  <div class="title">
+    <h1>SIMPLIFIED SSBU SCOREBOARD</h1>
+  </div>
+  <h2>HOW TO USE</h2>
+  <!-- ssb page ad -->
+  <ins class="adsbygoogle" style="display:block" data-ad-client="ca-pub-7144029242392624" data-ad-slot="7764191400"
+    data-ad-format="auto" data-full-width-responsive="true"></ins>
+  <script>
+    (adsbygoogle = window.adsbygoogle || []).push({});
+  </script>
+  <div class="instructions">
+    <a href="#advanced">click here to skip down to advanced features to learn how to use the controller with
+      start.gg</a>
+    <h3><u>Basic Setup</u></h3>
+    <ol>
+      <li>Open the links on the top bar for the controller and scoreboard in a new tab <br><img src="images/links.PNG">
+      </li>
+      <li>add the link to the scoreboard as a browser source in OBS Studio
+        <ol>
+          <li> Copy the link to the scoreboard </li>
+          <li> Add a New Browser source in OBS Studio <br><img src="images/addbrowser_source.png" height="600"></li>
+          <li> Paste the link and ensure that its size is 1920x1080 (also check your stream settings to ensure that its
+            output and window size is also 1920x1080)<br><img src="images/scoreboardadd.PNG" width="700">
+          </li>
+        </ol>
+      </li>
+      <li>add the controller to OBS Studio as a dock, this step is optional but is recommended as it allows you to use
+        the controller from within OBS Studio
+        thus removing the need to flip through tabs
+        <ol>
+          <li> Copy the link to the controller </li>
+          <li> On the top bar in OBS, click on "docks" > "custom browser docks" <br><img src="images/docks.png"
+              height="700"></li>
+          <li> paste the link to the controller and name it <br><img src="images/adock.PNG">
+          </li>
+        </ol>
+      </li>
+      <li> You are now done with the basic setup and should have somthing like the below screenshot,
+        (docks in OBS sort of behave like windows in windows so if you dont like it floating around you can drag it and
+        place it in the panels as you please)
+        <br> <img src="images/finalresult.PNG" width="800">
+      </li>
+    </ol>
+    <h3 id="advanced"><u>Advanced Features</u></h3>
+    <h4>Using Start.gg Match Numbers</h4>
+    <p>NOTE: this feature may be buggy as the current code is for the local event this overlay was originally made
+      for and is hard coded to take look for the bracket in a from a certain place (This is as i initially planed to not
+      publish this).<br>
+      That said, it will only work if the ultimate singles (pulling match data is not setup to work with doubles events
+      yet) event is the first event listed on the
+      "start.gg/tournaments/[event name]/event" page.
+      If your event is not set up this way, consider checking out the
+      <a href="https://github.com/Hunter-McMahon85/simplified-smash-scoreboard">source code and downloading a version to
+        modify yourself</a>
+      as the scoreboard can be used via launching the scoreboard and controller html files as a live server directly
+      from VS CODE using the
+      <a href=https://marketplace.visualstudio.com/items?itemName=ritwickdey.LiveServer">live server add on.</a>
+    </p>
+    <ol>
+      <li>Obtain a <a
+          href="https://developer.start.gg/docs/authentication/#:~:text=Generating%20a%20Token,AND%20fill%20out%20this%20form.">
+          start.gg api token</a>
+        <ul>
+          <li>
+            (these are case sensitive and should be treated as a password, this site does not save token info, for
+            transparency this project is <a href="https://github.com/Hunter-McMahon85/simplified-smash-scoreboard">
+              open source and hosted via github pages)</a></li>
+          <li>
+            (Additionally, start.gg will only show your token to you once upon generation so be sure to save it
+            somewhere secure)
+          </li>
         </ul>
-      </nav>
-    </div>
-    <div class="title">
-        <h1>SIMPLIFIED SSBU SCOREBOARD</h1>
-    </div>
-    <h2>HOW TO USE</h2>
-      <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7144029242392624" crossorigin="anonymous"></script>
-        <!-- ssb page ad -->
-        <ins class="adsbygoogle"
-        style="display:block"
-         data-ad-client="ca-pub-7144029242392624"
-        data-ad-slot="7764191400"
-        data-ad-format="auto"
-        data-full-width-responsive="true"></ins>
-       <script>
-        (adsbygoogle = window.adsbygoogle || []).push({});
-        </script>
-    <div class="instructions">
-        <h3><u>Basic Setup</u></h3>
-        <ol>
-            <li>Click on Scoreboard and Controller</li>
-            <li>add the link to the scoreboard as a browser source in OBS</li>
-            <li>(optional) add the controller to OBS as a dock</li>
-        </ol>
-        <h3><u>Advanced Features</u></h3>
-        <h4>Using Start.gg Match Numbers</h4>
-        <p>NOTE: this feature may be buggy as the current code is for the local event this overlay was originally made for.<br>
-            That said, it will only work if the ultimate singles (pulling matchdata is not setup to work with doubles events yet) event is the first event listed on the 
-            "start.gg/tournaments/[event name]/event" page. 
-            If your event is not set up this way, consider checking out the source code and downloading a version to modify yourself 
-            as the scoreboard can be used via launching the html files as a live server from VS CODE.
-        </p>
-        <ol>
-            <li>Obtain a start.gg api token (these are case sensitive and should be treated as a password, this site does not save token info)</li>
-            <li>Enter the API token into the controller</li>
-            <li>in the tournament link field of the controller, enter the "/tournaments/[event name]" part of the event link</li>
-            <li>Now you can get tags from matches by simply entering the match identifier into the match number field (the match identifier is the 1-2 letters next to a set)</li>
-        </ol>
-    </div>
-  </body>
+      </li>
+      <li>
+        Enter the API token into the controller <br>
+        <img src="images/token.PNG" height="500">
+      </li>
+      <li>
+        in the tournament link field of the controller, enter the "/tournaments/[event name]" part of the event link
+        <div class="brln">
+          <img src="images/link_example.png">
+          <br>
+          <img src="images/bracket_link.PNG">
+        </div>
+      </li>
+      <li>
+        Now you can get tags from matches by simply entering the match identifier into the match number field (the
+        match identifier is the 1-2 letters next to a set)
+        <br>
+        <img src="images/match.PNG">
+        <br>
+        <img src="images/entermatch.PNG">
+        <br>
+        <img src="images/match_num.PNG">
+        <br>
+        <img src="images/matchonboard.PNG">
+      </li>
+    </ol>
+  </div>
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7144029242392624"
+    crossorigin="anonymous"></script>
+</body>
