--- a/index.html
+++ b/index.html
@@ -27,12 +27,11 @@
     <h1>SIMPLIFIED SSBU SCOREBOARD</h1>
   </div>
   <h2>HOW TO USE</h2>
+
   <!-- ssb page ad -->
-  <ins class="adsbygoogle" style="display:block" data-ad-client="ca-pub-7144029242392624" data-ad-slot="7764191400"
-    data-ad-format="auto" data-full-width-responsive="true"></ins>
-  <script>
-    (adsbygoogle = window.adsbygoogle || []).push({});
-  </script>
+  <ins class="adsbygoogle" style="display:inline-block;width:730px;height:90px" data-ad-client="ca-pub-7144029242392624"
+    data-ad-slot="7764191400"></ins>
+
   <div class="instructions">
     <a href="#advanced">click here to skip down to advanced features to learn how to use the controller with
       start.gg</a>
@@ -124,4 +123,7 @@
   </div>
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7144029242392624"
     crossorigin="anonymous"></script>
+  <script>
+    (adsbygoogle = window.adsbygoogle || []).push({});
+  </script>
 </body>
