--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Simplified Smash Bros Scoreboard</title>
+  <title>Simplified Smash Bros Ultimate Scoreboard Stream Overlay</title>
   <link rel="stylesheet" href="css/index.css">
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7144029242392624"
     crossorigin="anonymous"></script>
