--- a/index.html
+++ b/index.html
@@ -6,8 +6,6 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Simplified Smash Bros Ultimate Scoreboard Stream Overlay</title>
   <link rel="stylesheet" href="css/index.css">
-  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7144029242392624"
-    crossorigin="anonymous"></script>
   <meta name="description" content="A simplified, open-source score board overlay utility for Super Smash Bros Ultimate Streams complete with start.gg API integration with
                                       more features on the way">
 </head>
@@ -29,8 +27,10 @@
   <h2>HOW TO USE</h2>
 
   <!-- ssb page ad -->
-  <ins class="adsbygoogle" style="display:inline-block;width:730px;height:90px" data-ad-client="ca-pub-7144029242392624"
-    data-ad-slot="7764191400"></ins>
+  <script type="text/javascript" src="https://udbaa.com/bnr.php?section=General&pub=837453&format=728x90&ga=g"></script>
+  <noscript><a href="https://yllix.com/publishers/837453" target="_blank"><img
+        src="//ylx-aff.advertica-cdn.com/pub/728x90.png" style="border:none;margin:0;padding:0;vertical-align:baseline;"
+        alt="ylliX - Online Advertising Network" /></a></noscript>
 
   <div class="instructions">
     <a href="#advanced">click here to skip down to advanced features to learn how to use the controller with
@@ -121,9 +121,5 @@
       </li>
     </ol>
   </div>
-  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7144029242392624"
-    crossorigin="anonymous"></script>
-  <script>
-    (adsbygoogle = window.adsbygoogle || []).push({});
-  </script>
+  
 </body>
