--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
 
   <!-- ssb page ad -->
   <script type="text/javascript" src="https://udbaa.com/bnr.php?section=General&pub=837453&format=728x90&ga=g"></script>
-  <noscript><a href="https://yllix.com/publishers/837453" target="_blank"><img
+  <a href="https://yllix.com/publishers/837453" target="_blank"><img
         src="//ylx-aff.advertica-cdn.com/pub/728x90.png" style="border:none;margin:0;padding:0;vertical-align:baseline;"
-        alt="ylliX - Online Advertising Network" /></a></noscript>
+        alt="ylliX - Online Advertising Network" /></a>
 
   <div class="instructions">
     <a href="#advanced">click here to skip down to advanced features to learn how to use the controller with
