--- a/index.html
+++ b/index.html
@@ -27,7 +27,16 @@
   <h2>HOW TO USE</h2>
 
   <!-- ssb page ad -->
-
+  <script type="text/javascript">
+    atOptions = {
+      'key' : 'ffc39b52e1c45e689f38454533ad98ef',
+      'format' : 'iframe',
+      'height' : 90,
+      'width' : 728,
+      'params' : {}
+    };
+    document.write('<scr' + 'ipt type="text/javascript" src="http' + (location.protocol === 'https:' ? 's' : '') + '://www.effectivecreativeformat.com/ffc39b52e1c45e689f38454533ad98ef/invoke.js"></scr' + 'ipt>');
+  </script>
 
   <div class="instructions">
     <a href="#advanced">click here to skip down to advanced features to learn how to use the controller with
