--- a/index.html
+++ b/index.html
@@ -27,7 +27,11 @@
   <h2>HOW TO USE</h2>
 
   <!-- ssb page ad -->
-  
+  <div id="amzn-assoc-ad-b5a507c8-1fa8-43b0-a3d9-9d1f458528f3"></div>
+  <script async
+    src="//z-na.amazon-adsystem.com/widgets/onejs?MarketPlace=US&adInstanceId=b5a507c8-1fa8-43b0-a3d9-9d1f458528f3">
+
+    </script>
 
   <div class="instructions">
     <a href="#advanced">click here to skip down to advanced features to learn how to use the controller with
