--- a/index.html
+++ b/index.html
@@ -27,11 +27,10 @@
   <h2>HOW TO USE</h2>
 
   <!-- ssb page ad -->
-  <div id="amzn-assoc-ad-b5a507c8-1fa8-43b0-a3d9-9d1f458528f3"></div>
-  <script async
-    src="//z-na.amazon-adsystem.com/widgets/onejs?MarketPlace=US&adInstanceId=b5a507c8-1fa8-43b0-a3d9-9d1f458528f3">
-
-    </script>
+  <iframe
+    src="//rcm-na.amazon-adsystem.com/e/cm?o=1&p=48&l=ur1&category=primevideo&banner=16DFWSBSWAYN1H2964G2&f=ifr&linkID=d9a8bf88a0d6a54b94e8de5b4399b5d3&t=simplesmashsc-20&tracking_id=simplesmashsc-20"
+    width="728" height="90" scrolling="no" border="0" marginwidth="0" style="border:none;" frameborder="0"
+    sandbox="allow-scripts allow-same-origin allow-popups allow-top-navigation-by-user-activation"></iframe>
 
   <div class="instructions">
     <a href="#advanced">click here to skip down to advanced features to learn how to use the controller with
