--- a/index.html
+++ b/index.html
@@ -27,10 +27,24 @@
   <h2>HOW TO USE</h2>
 
   <!-- ssb page ad -->
-  <iframe
-    src="//rcm-na.amazon-adsystem.com/e/cm?o=1&p=48&l=ur1&category=primevideo&banner=16DFWSBSWAYN1H2964G2&f=ifr&linkID=d9a8bf88a0d6a54b94e8de5b4399b5d3&t=simplesmashsc-20&tracking_id=simplesmashsc-20"
-    width="728" height="90" scrolling="no" border="0" marginwidth="0" style="border:none;" frameborder="0"
-    sandbox="allow-scripts allow-same-origin allow-popups allow-top-navigation-by-user-activation"></iframe>
+  <div class="alignleft">
+    <script type="text/javascript">
+        amzn_assoc_ad_type = "banner";
+ amzn_assoc_marketplace = "amazon";
+ amzn_assoc_region = "US";
+ amzn_assoc_placement = "assoc_banner_placement_default";
+ amzn_assoc_campaigns = "software";
+ amzn_assoc_banner_type = "category";
+ amzn_assoc_p = "48";
+ amzn_assoc_isresponsive = "false";
+ amzn_assoc_banner_id = "0JA6SQXTKVKM0P1BBWG2";
+ amzn_assoc_width = "728";
+ amzn_assoc_height = "90";
+ amzn_assoc_tracking_id = "simplesmashsc-20";
+ amzn_assoc_linkid = "0262cd04fc1ff17264131dc2e00a3903";
+    </script>
+    <script src="//z-na.amazon-adsystem.com/widgets/q?ServiceVersion=20070822&Operation=GetScript&ID=OneJS&WS=1"></script>
+   </div>
 
   <div class="instructions">
     <a href="#advanced">click here to skip down to advanced features to learn how to use the controller with
