--- a/misc/about.html
+++ b/misc/about.html
@@ -23,7 +23,10 @@
         <h1>About</h1>
     </div>
     <h2></h2>
-
+    <iframe
+    src="//rcm-na.amazon-adsystem.com/e/cm?o=1&p=48&l=ur1&category=primevideo&banner=16DFWSBSWAYN1H2964G2&f=ifr&linkID=d9a8bf88a0d6a54b94e8de5b4399b5d3&t=simplesmashsc-20&tracking_id=simplesmashsc-20"
+    width="728" height="90" scrolling="no" border="0" marginwidth="0" style="border:none;" frameborder="0"
+    sandbox="allow-scripts allow-same-origin allow-popups allow-top-navigation-by-user-activation"></iframe>
     <div class="instructions">
         <h3><u>The Creation</u></h3>
         <p>
