--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
   amzn_assoc_title = "Gear to Consider";
   amzn_assoc_search_bar = "true";
   </script>
+  <script src="//z-na.amazon-adsystem.com/widgets/onejs?MarketPlace=US"></script>
 
   <div class="instructions">
     <a href="#advanced">click here to skip down to advanced features to learn how to use the controller with
