--- a/index.html
+++ b/index.html
@@ -34,14 +34,17 @@
   <script type="text/javascript">
   amzn_assoc_placement = "adunit0";
   amzn_assoc_tracking_id = "simplesmashsc-20";
-  amzn_assoc_ad_mode = "manual";
+  amzn_assoc_ad_mode = "search";
   amzn_assoc_ad_type = "smart";
   amzn_assoc_marketplace = "amazon";
   amzn_assoc_region = "US";
-  amzn_assoc_asins = "B07DQWN8Y8,B09D8VYLY7,B07DQXQQG3,B07GY2RTRS";
-  amzn_assoc_linkid = "011928411f3b718b04fea9137d1af4ea";
-  amzn_assoc_title = "Gear to Consider";
-  amzn_assoc_search_bar = "true";
+  amzn_assoc_default_search_phrase = "smash bros";
+  amzn_assoc_default_category = "Electronics";
+  amzn_assoc_linkid = "602e6867866c0494c1cf470dd036dfa3";
+  amzn_assoc_default_browse_node = "172282";
+  amzn_assoc_title = "Shop Related Products";
+  amzn_assoc_search_bar = "false";
+  amzn_assoc_search_bar_position = "top";
   </script>
   <script src="//z-na.amazon-adsystem.com/widgets/onejs?MarketPlace=US"></script>
 
