--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
     src="//rcm-na.amazon-adsystem.com/e/cm?o=1&p=48&l=ur1&category=primevideo&banner=16DFWSBSWAYN1H2964G2&f=ifr&linkID=d9a8bf88a0d6a54b94e8de5b4399b5d3&t=simplesmashsc-20&tracking_id=simplesmashsc-20"
     width="728" height="90" scrolling="no" border="0" marginwidth="0" style="border:none;" frameborder="0"
     sandbox="allow-scripts allow-same-origin allow-popups allow-top-navigation-by-user-activation"></iframe>
+  <div>
   <script type="text/javascript">
   amzn_assoc_placement = "adunit0";
   amzn_assoc_tracking_id = "simplesmashsc-20";
@@ -47,6 +48,7 @@
   amzn_assoc_search_bar_position = "top";
   </script>
   <script src="//z-na.amazon-adsystem.com/widgets/onejs?MarketPlace=US"></script>
+  </div>
 
   <div class="instructions">
     <a href="#advanced">click here to skip down to advanced features to learn how to use the controller with
