--- a/index.html
+++ b/index.html
@@ -27,7 +27,8 @@
   <h2>HOW TO USE</h2>
 
   <!-- ssb page ad -->
-  <div>
+  <div id="container" style="text-align: center;">
+  <div style="width: 300px; display: inline-block;">
   <script type="text/javascript">
   amzn_assoc_placement = "adunit0";
   amzn_assoc_tracking_id = "simplesmashsc-20";
@@ -44,6 +45,7 @@
   amzn_assoc_search_bar_position = "top";
   </script>
   <script src="//z-na.amazon-adsystem.com/widgets/onejs?MarketPlace=US"></script>
+  </div>
   </div>
 
   <div class="instructions">
