--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
   <!-- ssb page ad -->
   <div id="container" style="text-align: center;">
-  <div style="width: 300px; display: inline-block;">
+  <div style="width: 50%; display: inline-block;">
   <script type="text/javascript">
   amzn_assoc_placement = "adunit0";
   amzn_assoc_tracking_id = "simplesmashsc-20";
