--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
   <link rel="stylesheet" href="css/index.css">
   <meta name="description" content="A simplified, open-source score board overlay utility for Super Smash Bros Ultimate Streams complete with start.gg API integration with
                                       more features on the way">
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7144029242392624"
+     crossorigin="anonymous"></script>
 </head>
 
 <body>
