--- a/misc/about.html
+++ b/misc/about.html
@@ -57,7 +57,7 @@
         </form>
         <h3>Creator</h3>
         <p>
-            This is a solo project made by Hunter M. aka KillerSharkNHwk online.
+            This is a solo project made by Hunter M.
         </p>
     </div>
 </body>
