made some updates to text content

--- a/scoreboard_and_controller/controller.html
+++ b/scoreboard_and_controller/controller.html
@@ -18,8 +18,8 @@
     <p>(only enter "tournament/ [tournament name]" part of start.gg link)</p>
     <br>
 
-    <input id="match_num" placeholder="Match Number"></input>
-    <button id="emn">Enter Match Number</button>
+    <input id="match_num" placeholder="Match ID"></input>
+    <button id="emn">Enter ID</button>
 
     <br>
     <br>
