--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,8 +9,9 @@
   <meta name="description" content="A simplified, open-source score board overlay utility for Super Smash Bros Ultimate Streams complete with start.gg API integration with
                                       more features on the way">
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7144029242392624"
-     crossorigin="anonymous"></script>
+    crossorigin="anonymous"></script>
 </head>
+
 <body>
   <div class="navbar">
     <nav class="topnav">
@@ -30,14 +32,25 @@
     width="728" height="90" scrolling="no" border="0" marginwidth="0" style="border:none;" frameborder="0"
     sandbox="allow-scripts allow-same-origin allow-popups allow-top-navigation-by-user-activation"></iframe>
   <div class="instructions">
-    <h3>disclamer</h3>
-  <p>
-    I built this scoreboard for my specific use case and there may be some bugs when using the start.gg api depending on how your tournament is set up. I will
-    attempt to at some point address these issues and add some customization options so that you can tailor this scoreboard further for your use case but at the very 
-    least it is fully controllable and functional without the start.gg api. That being said, if you want to use it for offline recording, none of the api features will work 
-    (duh) and you will also need to use something like a live server extension on VS code for it to function properly (details below). otherwise happy smashing<p>
-    <a href="#advanced">click here to skip down to advanced features to learn how to use the controller with
-      start.gg</a>
+    <h3><u>DISCLAMER</u></h3>
+    <p>
+      This socreboard overlay was made for my initial use case and may have some bugs depending on your use case. <br> <br>
+      For instance, the current version of the scoreboard does not have support for custom colors, fonts etc. unless you
+      download the scoreboard
+      and controller files from my github and modify them yourself. I eventually plan to add these features into the
+      controller to allow for customization for at least the color scheme. <br> <br>
+      Secondly, I built this scoreboard for my specific use case and as such the start.gg api integration is hard coded
+      for that case. For instance it will only be able to pull from the
+      start.gg api if your event is set up to only have one large bracket. If your event has pools the current code is
+      not capable of handleing that (I was unaware of this start.gg feature at the time of creation). I intend to
+      resolve this issue at some point
+      so that the scoreboard can pull match data no matter how your bracket is set up.
+      Though in any case, you are always able to control the scoreboard manually to set tags, charecters etc. <br> <br>
+      Finally, if you want to use this overlay for offline recording, you can download the source code from my github
+      repo and then open the scoreboard and controller as a live server from vs code.
+    <p>
+      <a href="#advanced">click here to skip down to advanced features to learn how to use the controller with
+        start.gg</a>
     <h3><u>Basic Setup</u></h3>
     <ol>
       <li>Open the links on the top bar for the controller and scoreboard in a new tab <br><img src="images/links.PNG">
@@ -111,8 +124,7 @@
         </div>
       </li>
       <li>
-        Now you can get tags from matches by simply entering the match identifier into the match number field (the
-        match identifier is the 1-2 letters next to a set)
+        Now you can get tags from matches by simply entering the match id into the match id field
         <br>
         <img src="images/match.PNG">
         <br>
@@ -123,26 +135,26 @@
         <img src="images/matchonboard.PNG">
       </li>
     </ol>
-</div>
+  </div>
   <!-- ssb page ad -->
   <div id="container" style="text-align: center;">
-  <div style="width: 50%; display: inline-block;">
-  <script type="text/javascript">
-  amzn_assoc_placement = "adunit0";
-  amzn_assoc_tracking_id = "simplesmashsc-20";
-  amzn_assoc_ad_mode = "search";
-  amzn_assoc_ad_type = "smart";
-  amzn_assoc_marketplace = "amazon";
-  amzn_assoc_region = "US";
-  amzn_assoc_default_search_phrase = "smash bros";
-  amzn_assoc_default_category = "Electronics";
-  amzn_assoc_linkid = "602e6867866c0494c1cf470dd036dfa3";
-  amzn_assoc_default_browse_node = "172282";
-  amzn_assoc_title = "Shop Related Products";
-  amzn_assoc_search_bar = "false";
-  amzn_assoc_search_bar_position = "top";
-  </script>
-  <script src="//z-na.amazon-adsystem.com/widgets/onejs?MarketPlace=US"></script>
-  </div>
+    <div style="width: 50%; display: inline-block;">
+      <script type="text/javascript">
+        amzn_assoc_placement = "adunit0";
+        amzn_assoc_tracking_id = "simplesmashsc-20";
+        amzn_assoc_ad_mode = "search";
+        amzn_assoc_ad_type = "smart";
+        amzn_assoc_marketplace = "amazon";
+        amzn_assoc_region = "US";
+        amzn_assoc_default_search_phrase = "smash bros";
+        amzn_assoc_default_category = "Electronics";
+        amzn_assoc_linkid = "602e6867866c0494c1cf470dd036dfa3";
+        amzn_assoc_default_browse_node = "172282";
+        amzn_assoc_title = "Shop Related Products";
+        amzn_assoc_search_bar = "false";
+        amzn_assoc_search_bar_position = "top";
+      </script>
+      <script src="//z-na.amazon-adsystem.com/widgets/onejs?MarketPlace=US"></script>
+    </div>
   </div>
 </body>
