--- a/index.html
+++ b/index.html
@@ -27,14 +27,21 @@
     <h1>SIMPLIFIED SSBU SCOREBOARD</h1>
   </div>
   <h2>HOW TO USE</h2>
-  <iframe
-    src="//rcm-na.amazon-adsystem.com/e/cm?o=1&p=48&l=ur1&category=primevideo&banner=16DFWSBSWAYN1H2964G2&f=ifr&linkID=d9a8bf88a0d6a54b94e8de5b4399b5d3&t=simplesmashsc-20&tracking_id=simplesmashsc-20"
-    width="728" height="90" scrolling="no" border="0" marginwidth="0" style="border:none;" frameborder="0"
-    sandbox="allow-scripts allow-same-origin allow-popups allow-top-navigation-by-user-activation"></iframe>
+
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7144029242392624"
+    crossorigin="anonymous"></script>
+  <!-- ssb page ad -->
+  <ins class="adsbygoogle" style="display:inline-block;width:730px;height:90px" data-ad-client="ca-pub-7144029242392624"
+    data-ad-slot="7764191400"></ins>
+  <script>
+    (adsbygoogle = window.adsbygoogle || []).push({});
+  </script>
+
   <div class="instructions">
     <h3><u>DISCLAMER</u></h3>
     <p>
-      This socreboard overlay was made for my initial use case and may have some bugs depending on your use case. <br> <br>
+      This socreboard overlay was made for my initial use case and may have some bugs depending on your use case. <br>
+      <br>
       For instance, the current version of the scoreboard does not have support for custom colors, fonts etc. unless you
       download the scoreboard
       and controller files from my github and modify them yourself. I eventually plan to add these features into the
