made some comments, fixed typos

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
   <div class="instructions">
     <p>welcome to my Simple SSBU scoreboard overlay. I felt like other options out there were too difficult to modify
       and were too bulky in their default configurations thus I created this web app overlay in order to create
-      something that I hope is more intuitive to use for the average Joe so thank you for giving this a looka and I hope
+      something that I hope is more intuitive to use for the average Joe so thank you for giving this a look and I hope
       to see some more clips made from events using this overlay ;)...
     </p>
     <h3><u>DISCLAMER</u></h3>
