--- a/index.html
+++ b/index.html
@@ -12,5 +12,5 @@
 </head>
 
 <body>
-  <p>THIS WEBSITE IS DEPRECIATED: PLEASE USE <a href="https://simplesmashscorebugs.com">simplesmashscorebugs.com</a></p>
+  <p>THIS WEBSITE IS DEPRECIATED: PLEASE USE <a href="https://www.simplesmashscorebugs.com">simplesmashscorebugs.com</a></p>
 </body>
